# gateway-solanize

./: $  .gitignore  Cargo.toml  README.md  config.yaml  config.yaml.example  deploy.sh  gateway.db  gateway.db-shm  gateway.db-wal  repomix-output.md  solana-micro-service-api_spec.md
.github/workflows/: deploy.yml
src/: config.rs  db.rs  error.rs  lib.rs  logging_macros.rs  main.rs  types.rs
src/api/: wallet.rs
src/auth/: guards.rs  handlers.rs  mod.rs  service.rs
src/chat/: api0_service.rs  handlers.rs  mod.rs  service.rs
src/payment/: handlers.rs  service.rs
src/solana/: mod.rs  solana_service.rs
