[package]
name = "gateway-solanize"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bs58 = "0.5.1"
chrono = "0.4.41"
config = "0.15.14"
ed25519-dalek = "2.2.0"
jsonwebtoken = "9.3.1"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json"] }
rocket = { version = "0.5.1", features = ["json", "uuid"] }
rocket_cors = "0.6.0"
serde = "1.0.219"
serde_json = "1.0.143"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
thiserror = "2.0.15"
tokio = "1.47.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = "1.18.0"
